expense-app/src/objects/Chat_used_Bot__c.object
<CustomObject>
    <fields>
        <fullName>Chat_ID__c</fullName>
        <label>Chat ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Keeper__c</fullName>
        <label>Email Keeper</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keeper_ID__c</fullName>
        <label>Keeper ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keeper_Password__c</fullName>
        <label>Keeper Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Chat used Bot</label>
    <nameField>
        <label>Chat used Bot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chats used Bot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>